--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -2,7 +2,7 @@
 <q-btn flat dense size="md" @click.prevent="urlDialog.show = true" icon="share" color="white"></q-btn>
 {% endblock %} {% block footer %}{% endblock %} {% block page_container %}
 <q-page-container>
-  <q-page id="tpos">
+  <q-page>
     <q-page-sticky v-if="exchangeRate" expand position="top">
       <div class="row justify-center full-width">
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
@@ -484,7 +484,7 @@
       toggleFullscreen() {
         if (document.fullscreenElement) return document.exitFullscreen()
 
-        const elem = document.getElementById('tpos')
+        const elem = document.documentElement
         elem.requestFullscreen({ navigationUI: "show" })
           .then(() => { })
           .catch(err => console.log(err))
