--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -50,6 +50,9 @@
     <q-page-sticky position="top-right" :offset="[18, 18]">
       <q-btn @click="showLastPayments" fab icon="receipt_long" color="primary" />
     </q-page-sticky>
+    <q-page-sticky position="top-right" :offset="[18, 90]">
+      <q-btn @click="toggleFullscreen" fab :icon="fullScreenIcon" color="primary" />
+    </q-page-sticky>
     <q-dialog v-model="invoiceDialog.show" position="top" @hide="closeInvoiceDialog">
       <q-card v-if="invoiceDialog.data" class="q-pa-lg q-pt-xl lnbits__dialog-card">
         <q-responsive :ratio="1" class="q-mx-xl q-mb-md">
@@ -209,7 +212,8 @@
         complete: {
           show: false
         },
-        rounding: false
+        rounding: false,
+        isFullScreen: false
       }
     },
     computed: {
@@ -263,6 +267,9 @@
         }
 
         return Math.ceil(this.amount / toNext) * toNext
+      },
+      fullScreenIcon() {
+        return this.isFullScreen ? 'fullscreen_exit' : 'fullscreen'
       }
     },
     methods: {
@@ -474,7 +481,19 @@
       showLastPayments() {
         this.getLastPayments()
         this.lastPaymentsDialog.show = true
-      }
+      },
+      toggleFullscreen() {
+        if (document.fullscreenElement) return document.exitFullscreen()
+
+        const elem = document.documentElement
+        elem.requestFullscreen({ navigationUI: "show" })
+          .then(() => {
+            document.addEventListener("fullscreenchange", () => {
+              this.isFullScreen = document.fullscreenElement
+            })
+          })
+          .catch(err => console.log(err))
+      },
     },
     created: function () {
       var getRates = this.getRates
@@ -487,6 +506,7 @@
       if ('{{ tpos.tip_wallet }}') {
         this.tip_options.push('Round')
       }
+
       setInterval(function () {
         getRates()
       }, 120000)
